[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.13.1,<2",
    "jupyter-packaging==0.12.3",
]
build-backend = "jupyter_packaging.build_api"

[tool.black]
line-length = 200
target-version = ['py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
| perspective/tests
)/
'''

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'perspective/tests'
