[metadata]
description_file = README.md
long_description_content_type=text/markdown

[build_ext]
inplace=0

[black]
exclude=perspective/tests/

[flake8]
ignore=E203, W503
max-line-length=200
exclude=perspective/tests/
per-file-ignores=
    perspective/__init__.py:F401,F403
    perspective/core/__init__.py:F401
    perspective/core/data/__init__.py:F401